# solvacheck

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.streamlit/: config.toml
docs/: README.md  index.md
docs/architecture/: index.md
docs/dependencies/: README.md
